# api2convert-rust

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  live-conformance.yml  release.yml
docs/: CHANGELOG.md  SDK_CONTRACT.md
examples/: add-watermark.rs  audio-operations.rs  authentication.rs  capture-website.rs  compare-files.rs  compress-files.rs  convert-files.rs  convert.rs  create-archives.rs  create-hashes.rs  create-thumbnails.rs  extract-assets.rs  file-analysis.rs  image-operations.rs  job-lifecycle.rs  presets.rs  quickstart.rs  rate-limits.rs  statistics.rs  uploading-files.rs  webhook.rs  webhooks.rs
openapi/: api2convert.openapi.json
src/: client.rs  cloud.rs  config.rs  convert_options.rs  data.rs  enums.rs  errors.rs  lib.rs  models.rs  redact.rs  resources.rs  result.rs  upload.rs  version.rs  webhook.rs
src/transport/: http_sender.rs  mod.rs  reqwest_sender.rs
tests/: cloud_connector.rs  convert.rs  error_mapping.rs  file_download.rs  file_uploader.rs  live.rs  path_encoding.rs  resources.rs  retry.rs  security.rs  transport_edge.rs  upload_multipart.rs  wait.rs  webhook.rs
tests/common/: mod.rs
