[package]
name = "api2convert"
version = "10.2.0"
edition = "2021"
rust-version = "1.86"
description = "Official Rust SDK for the API2Convert file-conversion API — one-call convert with upload, polling, download and webhook verification."
license = "MIT"
authors = ["Qaamgo Media GmbH"]
repository = "https://github.com/QaamGo/api2convert-rust"
homepage = "https://www.api2convert.com"
documentation = "https://docs.rs/api2convert"
readme = "README.md"
keywords = ["api2convert", "conversion", "convert", "file", "sdk"]
categories = ["api-bindings", "web-programming::http-client", "multimedia"]
exclude = ["/.github", "/tests", "/docs", "/openapi", "/Makefile"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
# The security suite spins up minimal loopback HTTP servers hand-rolled over
# std::net::TcpListener. hmac/sha2 (already runtime deps) let the webhook test
# compute a signature to verify against.
hmac = "0.12"
sha2 = "0.10"

# One runnable example per documented guide (docs.api2convert.com).
[[example]]
name = "quickstart"
path = "examples/quickstart.rs"

[[example]]
name = "convert-files"
path = "examples/convert-files.rs"

[[example]]
name = "uploading-files"
path = "examples/uploading-files.rs"

[[example]]
name = "job-lifecycle"
path = "examples/job-lifecycle.rs"

[[example]]
name = "add-watermark"
path = "examples/add-watermark.rs"

[[example]]
name = "create-thumbnails"
path = "examples/create-thumbnails.rs"

[[example]]
name = "compress-files"
path = "examples/compress-files.rs"

[[example]]
name = "create-archives"
path = "examples/create-archives.rs"

[[example]]
name = "create-hashes"
path = "examples/create-hashes.rs"

[[example]]
name = "extract-assets"
path = "examples/extract-assets.rs"

[[example]]
name = "file-analysis"
path = "examples/file-analysis.rs"

[[example]]
name = "compare-files"
path = "examples/compare-files.rs"

[[example]]
name = "capture-website"
path = "examples/capture-website.rs"

[[example]]
name = "audio-operations"
path = "examples/audio-operations.rs"

[[example]]
name = "image-operations"
path = "examples/image-operations.rs"

[[example]]
name = "webhooks"
path = "examples/webhooks.rs"

[[example]]
name = "presets"
path = "examples/presets.rs"

[[example]]
name = "statistics"
path = "examples/statistics.rs"

[[example]]
name = "rate-limits"
path = "examples/rate-limits.rs"

[[example]]
name = "authentication"
path = "examples/authentication.rs"
